k8s/05-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: studmgmt
spec:
  selector: { app: backend }
  ports:
    - port: 80
      targetPort: 5000
