k8s/07-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: studmgmt
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
